--- a/index.html
+++ b/index.html
@@ -1,29 +1,44 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Practical Level-of-Detail Aggregation of Fur Appearance</title>
+    <title>A Moving Eulerian-Lagrangian Particle Method for Thin Film and Foam
+        Simulation</title>
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes, minimal-ui">
-
-
 </head>
+
+<!-- Fonts -->
+<style>
+    .myFont {
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    }
+</style>
+
+<style>
+    .courier {
+        font-family: 'Courier New', Courier, monospace; margin-bottom: 2cm;
+    }
+</style>
+
 <body>
     <div id="app">
-        <v-app>
+        <v-app class="myFont">
             <v-row justify="center" no-gutters>
                 <v-col class="py-4 text-center" :xl="7" :lg="7" :md="8" :sm="12" :xs="12">
                     <!--  Title and teaser -->
-                    <v-row justify="center" class="mt-4"  no-gutters>
+                    <v-row justify="center" class="mt-11"  no-gutters>
                         <v-sheet tile>
-                            <div class="text-h3">{{title}}</div>
-                            <div class="text-h4 mt-4">SIGGRAPH2022</div>
+                            <div class="myFont"><h1>{{title}}</h1></div>
+                            <div style="line-height:65%;">
+                                <br>
+                            </div>
+                            <div class="myFont"><h3>SIGGRAPH 2022</h3></div>
                         </v-sheet>
-                        <v-col :cols="12" class="mt-2" >
+                        <v-col :cols="12" class="mt-5" >
                             <span v-for="author in authors" class="mr-4">
                                 <span v-if="author.link != null" >
                                     <a :href=author.link>{{author.name}}</a>
@@ -38,66 +53,69 @@
 
                         <v-col :cols="12" class="mt-2">
                             <span v-for="(institution, index) in institutions" class="mr-4">
-                                {{institution}}<sup>{{index+1}}</sup>
+                                <h5>{{institution}}</h5> 
                             </span>
                         </v-col>
-                        <v-img height="100%" class="mt-2"
-                               src="images/repre.png">
+                        <v-img height="100%" class="mt-4"
+                               src="images/bubble_burst.jpg">
                         </v-img>
                     </v-row>
 
                     <!--  Abstract -->
-                    <v-row justify="left" class="mt-4"  no-gutters>
-                        <v-col :cols="12" >
-                            <div class="text-h4 text-left"> Abstract</div>
-                            <div class="text-body-1 text-left">
+                    <v-row justify="left" class="mt-11"  no-gutters>
+                        <v-col class="col-12 text-left">
+                            <div class="myFont"> <h3>Abstract</h3></div>
+                            <div class="myFont">
                                 {{abstract}}
                             </div>
                         </v-col>
                     </v-row>
 
-                    <!--  Download -->
-                    <v-row justify="left" class="mt-4"  no-gutters>
+                    <!--  Paper -->
+                    <v-row justify="left" class="mt-6"  no-gutters>
                         <v-col class="col-12 text-left">
-                            <div class="text-h4"> Download</div>
-
-                            <v-btn color="blue-grey" dark href="../../publications/paper_fur_aggregation.pdf" target="_blank"> PAPER
+                            <div class="myFont"> <h3>Paper</h3></div>
+                            <div style="line-height:35%;">
+                                <br>
+                            </div>
+                            <v-btn color="blue" dark href="../../publications/paper_fur_aggregation.pdf" target="_blank"> PDF
                                 <v-icon class="ml-2 white--text" >mdi-cloud-download</v-icon>
                             </v-btn>
-							<v-btn color="blue-grey" dark href="../../publications/code_fur_aggregation.zip" target="_blank"> CODE
-                                <v-icon class="ml-2 white--text" >mdi-cloud-download</v-icon>
-                            </v-btn>
-
                         </v-col>
                     </v-row>
 
                     <!--  Video -->
-                    <v-row class="mt-4"  no-gutters>
-                        <div class="text-h4 text-left"> Video</div>
+                    <v-row class="mt-7"  no-gutters>
+                        <div class="myFont"> <h3>Video</h3> <div style="line-height:45%;">
+                            <br>
+                        </div></div>
                         <video controls="" preload="metadata" align="center" width="100%" style="display:block;   width:100%;">
-                            <source src="../../publications/video_fur_aggregation.mp4" type="video/mp4">
+                            <source src="videos/melp_final_video.mp4" type="video/mp4">
                         </video>
                     </v-row>
 
-
                     <!--  Bibtex -->
-                    <v-row justify="left" class="mt-4"  no-gutters>
-                        <v-sheet tile>
-                            <div class="text-h4 text-left"> Bibtex</div>
-                        </v-sheet>
+                    <v-row justify="left" class="mt-7"  no-gutters>
+                        <v-col class="col-12 text-left">
+                            <div class="myFont"> <h3>Citation</h3>
+                                <div style="line-height:15%;">
+                                    <br>
+                                </div></div>
+                            <div class="courier">
+@article{Deng2022MELP,<br>
+    &nbsp;title={A Moving Eulerian-Lagrangian Particle Method for Thin Film and Foam
+    Simulation}, <br>
+    &nbsp;author={Y. Deng and M. Wang and X. Kong and S. Xiong and Z. Xian and B. Zhu},<br>
+    &nbsp;journal={ACM Trans. Graph.},<br>
+    &nbsp;volume={41},<br>
+    &nbsp;number={4},<br>
+    &nbsp;article={154},<br>
+    &nbsp;year={2022}<br>
+}
+                            </div>
+                        </v-col>
                     </v-row>
 
-                    <pre id=bibtex class="text-left"> <span style="font-family: sans-serif">
-@article{fur2022aggre,
-  title={Practical Level-of-Detail Aggregation of Fur Appearance},
-  author={Zhu, Junqiu and Zhao, Sizhe and Wang, Lu and Xu, Yanning and Ling-Qi, Yan},
-  journal={ACM Transactions on Graphics (Proceedings of SIGGRAPH 2022)},
-  year={2022},
-  volume={41},
-  number={4},
-}
-</span>
-</pre>
                 </v-col>
             </v-row>
 
@@ -129,30 +147,28 @@
             </v-footer>
         </v-app>
     </div>
+    <script>hljs.initHighlightingOnLoad();</script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+
 
 <script>
     var app = new Vue({
         el: '#app',
         vuetify: new Vuetify(),
         data: {
-            links: [
-                'About Us',
-                'Team',
-                'Contact Us'
-            ],
-            title:'Practical Level-of-Detail Aggregation of Fur Appearance',
-            abstract:'Fur appearance rendering is crucial for the realism of computer generated imagery, but is also a challenge in computer graphics for many years. Much effort has been made to accurately simulate the multiple-scattered light transport among fur fibers,  but the computation cost is still very high, since the number of fur fibers is usually extremely large. In this paper, we aim at reducing the number of fur fibers while preserving realistic fur appearance. We present an aggregated fur appearance model, using one thick cylinder to accurately describe the aggregated optical behavior of a bunch of fur fibers, including the multiple scattering of light among them. Then, to acquire the parameters of our aggregated model, we use a lightweight neural network to map individual fur fiber’s optical properties to those in our aggregated model. Finally, we come up with a practical heuristic that guides the simplification process of fur dynamically at different bounces of the light, leading to a practical level-of-detail rendering scheme. Our method achieves nearly the same results as the ground truth, but performs 3.8X-13.5X faster.',
+            title:'A Moving Eulerian-Lagrangian Particle Method for Thin Film and Foam Simulation',
+            abstract:'We present the Moving Eulerian-Lagrangian Particles (MELP), a novel mesh-free method for simulating incompressible fluid on thin films and foams. Employing a bi-layer particle structure, MELP jointly simulates detailed, vigorous flow and large surface deformation at high stability and efficiency. In addition, we design multi-MELP: a mechanism that facilitates the physically-based interaction between multiple MELP systems, to simulate bubble clusters and foams with non-manifold topological evolution. We showcase the efficacy of our method with a broad range of challenging thin film phenomena, including the Rayleigh-Taylor instability across double-bubbles, foam fragmentation with rim surface tension, recovery of the Plateau borders, Newton black films, as well as cyclones on bubble clusters.',
             authors:[
-                {name:'JUNQIU ZHU', sup:1, link:null },
-                {name:'SIZHE ZHAO', sup:1, link:null},
-                {name:'LU WANG', sup:1, link:null},
-                {name:'YANNING XU', sup:1, link:null},
-                {name:'LING-QI YAN', sup:2, link:null},
+                {name:'Yitong Deng', link:null },
+                {name:'Mengdi Wang', link:'https://wang-mengdi.github.io/'},
+                {name:'Xiangxin Kong', link:null},
+                {name:'Shiying Xiong', link:'https://shiyingxiong.github.io/'},
+                {name:'Zangyueyang Xian', link:null},
+                {name:'Bo Zhu', link:'https://www.cs.dartmouth.edu/~bozhu/'},
             ],
-            institutions:['Shandong University', 'University of California, Santa Barbara'],
+            institutions:['Dartmouth College, Visual Computing Lab'],
         },
         methods:{
             test(){
