--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             <div style="line-height:35%;">
                                 <br>
                             </div>
-                            <v-btn color="blue" dark href="../../publications/paper_fur_aggregation.pdf" target="_blank"> PDF
+                            <v-btn color="blue" dark href="documents/melp_paper.pdf" target="_blank"> PDF
                                 <v-icon class="ml-2 white--text" >mdi-cloud-download</v-icon>
                             </v-btn>
                         </v-col>
@@ -90,7 +90,7 @@
                             <br>
                         </div></div>
                         <video controls="" preload="metadata" align="center" width="100%" style="display:block;   width:100%;">
-                            <source src="videos/melp_final_video.mp4" type="video/mp4">
+                            <source src="https://www.youtube.com/watch?v=xW-G7hm6SWQ&t=253s" type="video/mp4">
                         </video>
                     </v-row>
 
