--- a/index.html
+++ b/index.html
@@ -89,10 +89,9 @@
                         <div class="myFont"> <h3>Video</h3> <div style="line-height:45%;">
                             <br>
                         </div></div>
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/xW-G7hm6SWQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        <!-- <video controls="" preload="metadata" align="center" width="100%" style="display:block;   width:100%;">
-                            <source src="https://youtu.be/xW-G7hm6SWQ" type="video/mp4">
-                        </video> -->
+                        <video controls="" preload="metadata" align="center" width="100%" style="display:block;   width:100%;">
+                            <source src="videos/melp_compressed.mp4" type="video/mp4">
+                        </video>
                     </v-row>
 
                     <!--  Bibtex -->
