--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             title:'A Moving Eulerian-Lagrangian Particle Method for Thin Film and Foam Simulation',
             abstract:'We present the Moving Eulerian-Lagrangian Particles (MELP), a novel mesh-free method for simulating incompressible fluid on thin films and foams. Employing a bi-layer particle structure, MELP jointly simulates detailed, vigorous flow and large surface deformation at high stability and efficiency. In addition, we design multi-MELP: a mechanism that facilitates the physically-based interaction between multiple MELP systems, to simulate bubble clusters and foams with non-manifold topological evolution. We showcase the efficacy of our method with a broad range of challenging thin film phenomena, including the Rayleigh-Taylor instability across double-bubbles, foam fragmentation with rim surface tension, recovery of the Plateau borders, Newton black films, as well as cyclones on bubble clusters.',
             authors:[
-                {name:'Yitong Deng', link:null },
+                {name:'Yitong Deng', link:'https://yitongdeng.github.io/' },
                 {name:'Mengdi Wang', link:'https://wang-mengdi.github.io/'},
                 {name:'Xiangxin Kong', link:null},
                 {name:'Shiying Xiong', link:'https://shiyingxiong.github.io/'},
