--- a/index.html
+++ b/index.html
@@ -84,14 +84,45 @@
                         </v-col>
                     </v-row>
 
-                    <!--  Video -->
-                    <v-row class="mt-7"  no-gutters>
+                    <v-row justify="left" class="mt-6"  no-gutters>
                         <div class="myFont"> <h3>Video</h3> <div style="line-height:45%;">
                             <br>
                         </div></div>
-                        <video controls="" preload="metadata" align="center" width="100%" style="display:block;   width:100%;">
+                    </v-row>
+
+                    <!--  Video -->
+                    <v-row class="mt-0"  no-gutters>
+                        <!-- <div class="myFont"> <h3>Video</h3> <div style="line-height:45%;">
+                            <br>
+                        </div></div> -->
+                        <style>
+                    		.videoWrapper {
+							  position: relative;
+							  padding-bottom: 56.25%;
+							  /* 16:9 */
+							  padding-top: 252px;
+							  height: 0;
+							}
+
+							.videoWrapper iframe {
+							  position: absolute;
+							  top: 0;
+							  left: 0;
+							  width: 100%;
+							  height: 100%;
+							}
+					    </style>
+                        <style>
+                            #myFrame { width:100%; height:100%; }
+                            #my-div {
+                                width: 100vw;
+                            }
+                        </style>
+                        <div id="my-div">
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xW-G7hm6SWQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>                        </div>
+                        <!-- <video controls="" preload="metadata" align="center" width="100%" style="display:block; width:100%;">
                             <source src="videos/melp_compressed.mp4" type="video/mp4">
-                        </video>
+                        </video> -->
                     </v-row>
 
                     <!--  Bibtex -->
